force-app/main/default/objects/Contract_Review__c/Contract_Review__c.object-meta.xml
<CustomObject>
    <label>Contract Review</label>
    <nameField>
        <displayFormat>CTR-{0000}</displayFormat>
        <label>CTR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>