force-app/main/default/objects/Contract_Review__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Asset_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Type</label>
    <type>Text</type>
</CustomField>