force-app/main/default/objects/Contract_Review__c/fields/Ball_In_Court__c.field-meta.xml
<CustomField>
    <fullName>Ball_In_Court__c</fullName>
    <description>Whose turn it is in the PSA negotiation. Flipped automatically by PsaVersionController when a version is logged (seller version -> Us; our version -> Seller).</description>
    <label>Ball In Court</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Us</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>