force-app/main/default/objects/Contract_Review__c/fields/Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>Latest_Version__c</fullName>
    <description>Running count of PSA versions logged against this contract (maintained by PsaVersionController).</description>
    <label>Latest Version #</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>