force-app/main/default/objects/Contract_Review__c/fields/Negotiation_Status__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Status__c</fullName>
    <description>Junior&apos;s Section 15 PSA lifecycle: Initial Draft (seller drafts first) -&gt; Seller Counter / Buyer Counter -&gt; Revised -&gt; Ready for Execution -&gt; Executed. Synced to the coarse Stage__c by the Contract_Review_Stage_Sync flow; Executed triggers the transaction handoff.</description>
    <label>Negotiation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Draft</fullName>
                <default>true</default>
                <label>Initial Draft</label>
            </value>
            <value>
                <fullName>Seller Counter</fullName>
            </value>
            <value>
                <fullName>Buyer Counter</fullName>
            </value>
            <value>
                <fullName>Revised</fullName>
            </value>
            <value>
                <fullName>Ready for Execution</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>