force-app/main/default/objects/Contract_Review__c/fields/PSA_Date__c.field-meta.xml
<CustomField>
    <fullName>PSA_Date__c</fullName>
    <label>PSA Date</label>
    <type>Date</type>
</CustomField>