force-app/main/default/objects/Contract_Review__c/fields/Selected_Offer__c.field-meta.xml
<CustomField>
    <!--
        ADDED 2026-08-25 (native LOI/PSA Details, scope addition). Twin of
        LOI__c/fields/Selected_Offer__c - read that file for the full reasoning; everything it
        says about being a LINK rather than a copy, about being stamped onto the CHILD at insert
        (and therefore needing no Queueable), and about null being a normal non-error state
        applies here unchanged. THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY.
        ⚠ AMENDED 2026-08-25: the parenthesis above used to read "unlike
        Disposition__c.Primary_PSA__c". That lookup was deleted later the same day with the rest
        of the child-mirror field family (manifest/remove-disposition-child-mirrors/). This
        field is UNAFFECTED - it lives on Contract_Review__c and links to a real child record
        rather than mirroring one onto the parent.

        Stamped by DispositionStageEntryService.openDispositionContractReviews, in the same
        Database.insert that creates the Contract Review.

        ⚠ BLANK ON EVERY ACQUISITION CONTRACT REVIEW, PERMANENTLY, AND THAT IS CORRECT. This
        object is shared between the buy side (Opportunity__c populated) and the sell side
        (Disposition__c populated) - see the Disposition_PSA record type file for why a row must
        never carry both parents. Only the sell side has offers, so only the sell side ever
        carries a value here.

        deleteConstraint SetNull. relationshipName Selected_Offer_PSAs, distinct from the LOI__c
        twin's Selected_Offer_LOIs so the two child relationships on Disposition_Offer__c do not
        collide.

        FLS: read + edit on DPEG_Disposition_Edit (a lookup CAN carry editable = true; the
        one-off backfill that was half this reason was retired with the Disposition__c lookups
        on 2026-08-25, leaving the human-editing half), read-only on DPEG_Disposition_View.
    -->
    <fullName>Selected_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The selected Disposition Offer this PSA was raised against - stamped when the Contract Review is auto-created. Blank on acquisition Contract Reviews and on dispositions that never ran an offer round.</description>
    <inlineHelpText>Opens the buyer offer this PSA came from. Set automatically when the Contract Review is created; blank if the disposition had no selected offer.</inlineHelpText>
    <label>Selected Offer</label>
    <referenceTo>Disposition_Offer__c</referenceTo>
    <relationshipLabel>Contract Reviews (Selected Offer)</relationshipLabel>
    <relationshipName>Selected_Offer_PSAs</relationshipName>
    <type>Lookup</type>
</CustomField>