force-app/main/default/objects/Contract_Review__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSA Drafting</fullName>
                <default>true</default>
                <label>PSA Drafting</label>
            </value>
            <value>
                <fullName>Prepare</fullName>
            </value>
            <value>
                <fullName>Counter</fullName>
            </value>
            <value>
                <fullName>Contract Execution (Signed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>