force-app/main/default/objects/Contract_Review__c/recordTypes/Acquisition_PSA.recordType-meta.xml
<RecordType>
    <!--
        THIS NOTE LIVES IN A COMMENT INSIDE THE ROOT ELEMENT and must stay that way. A comment
        placed ABOVE <RecordType> breaks `sf` deploy at source conversion with the misleading
        error "unable to find matching parent xml file". The <description> below is deliberately
        short because RecordType.description is capped at 255 CHARACTERS - a cap this programme
        has now breached FIVE times, every one caught only by measuring. Long rationale goes
        here, where nothing is sent to the Metadata API and length is unlimited.

        THE BUY-SIDE PSA. This is the shape that exists today: DPEG is the buyer, the paper
        comes from the seller's counsel, and Ball_In_Court__c 'Seller' correctly names the
        counterparty. Parented by Opportunity__c; Disposition__c stays blank.

        ⚠ BOTH RECORD TYPES EXPOSE THE SAME FOUR Negotiation_Status__c VALUES, AND THAT IS THE
        POINT - IT IS NOT AN OVERSIGHT TO BE "FIXED" LATER. Initial Draft -> Revised -> Ready
        for Execution -> Executed are ALREADY exactly the four states the client document names
        for the sell-side PSA, so unlike LOI__c and NDA__c there is no second vocabulary to
        carry. Contract_Review__c therefore needs NO record-type-aware stage map in
        RecordStageAdvanceService - it keeps ONE map serving both types. Anyone adding a
        disposition-only status here should re-read that: it would turn a one-map object into a
        two-map object and drag the Apex change back into scope.

        =====================================================================
        🔴 RETRACTED 2026-08-14 (Phase 3, observation 7). THE PARAGRAPH DIRECTLY ABOVE IS NOW
        FALSE IN EVERY CLAUSE, AND ITS CLOSING WARNING IS AN EXACT DESCRIPTION OF WHAT HAPPENED.
        =====================================================================

        RETRACTED, verbatim: "BOTH RECORD TYPES EXPOSE THE SAME FOUR Negotiation_Status__c
        VALUES... Contract_Review__c therefore needs NO record-type-aware stage map in
        RecordStageAdvanceService - it keeps ONE map serving both types."

        🔴 IT CLOSES WITH: "Anyone adding a disposition-only status here should re-read that: it
        would turn a one-map object into a two-map object and drag the Apex change back into
        scope." THAT IS EXACTLY WHAT THIS CHANGE DOES - from the other direction. No
        disposition-only status was added; an ACQUISITION-only set was. The consequence is
        identical and the Apex change was in scope as requirements C9.

        🔴 THE NEXT SENTENCE IS FALSE AS OF 2026-08-14. IT IS KEPT ONLY AS THE RETRACTED TEXT.
        DO NOT ACT ON IT; THE CORRECTION IS DIRECTLY BELOW. ⚠ THIS IS THE SENTENCE THAT
        GENERATED A PHANTOM OPEN ITEM AT REVIEW - this file is where a reader lands asking "what
        does observation 7 still owe?", and the answer they found was a description of work that
        had already shipped.
        [FALSE] "requirements C9 requires CONTRACT_REVIEW_NEXT_STAGE to be SPLIT, and that
        class's header still asserts the two types point at ONE map shared BY REFERENCE,
        'deliberately', and that 'copying it would invite the two to drift apart'. That prose is
        now wrong and is DEVELOPER work to correct - it is not fixable from this file." [END FALSE]

        ⇒ THE SPLIT IS DELIVERED. There is no shared map in RecordStageAdvanceService:
          - the doc block preceding the acquisition map now OPENS with "🔴 THE SHARED MAP IS
            GONE. THIS IS THE SPLIT ITS OWN COMMENT PREDICTED." (~line 645), and the sentence
            below it names the old CONTRACT_REVIEW_NEXT_STAGE object as HISTORY (~line 646);
          - CONTRACT_REVIEW_ACQUISITION_NEXT_STAGE is declared at ~line 723 and
            CONTRACT_REVIEW_DISPOSITION_NEXT_STAGE at ~line 749 - two separate map objects, not
            one referenced twice;
          - the StageConfig at ~lines 1157 and 1159 points Acquisition_PSA at the first and
            Disposition_PSA at the second, each with its own gate;
          - the class header's object list marks the old "the two types share ONE SEQUENCE and
            differ ONLY in the GATE" line FALSE since 2026-08-14.
        The falsifier is RecordStageAdvanceServiceTest.psaSequencesAreSplitPerRecordType, which
        goes red if anyone re-merges the maps.
        ⚠ VERIFY BY IDENTIFIER, NOT BY LINE NUMBER - line numbers in a .cls drift with every
        edit and the four names above do not.

        THE TWO SEQUENCES FROM 2026-08-14:
          Acquisition_PSA  Draft -> Negotiation -> Signed -> Executed
          Disposition_PSA  Initial Draft -> Revised -> Ready for Execution -> Executed  [UNCHANGED]
        'Executed' is the ONLY shared value and it is the terminal on BOTH. That single fact is
        what keeps flexipages/Contract_Review_Record_Page correct with no edit at all - both its
        Advance Stage entries gate on Negotiation_Status__c NE 'Executed', and unlike LOI__c the
        PSA terminal did NOT move. Checked, not assumed.

        🔴 NOTHING IS DEACTIVATED ON THE FIELD (decision O3, a hard stop). 'Initial Draft',
        'Revised' and 'Ready for Execution' are removed from THIS RECORD TYPE at P3-D3 and stay
        ACTIVE on Negotiation_Status__c, because Disposition_PSA still runs on all three.

        ⚠ P3-D3 DONE. The seven-value transitional state described above is retired. 'Initial
        Draft', 'Revised' and 'Ready for Execution' are removed from THIS RECORD TYPE (kept
        ACTIVE on the field - decision O3, Disposition_PSA still runs on all three), and the
        default has flipped from 'Initial Draft' to 'Draft'. Applied via
        agent-output/p3-d3-retire-loi-psa/.

        🔴 A RECORD-TYPE DEFAULT DOES NOT APPLY TO APEX DML, so flipping it does NOT fix
        requirements C3: OpportunityReviewService's Contract Review insert stamps no
        Negotiation_Status__c and takes the FIELD default ('Initial Draft'), which after P3-D3 is
        not on this record type. It commits SILENTLY - record-type picklist restriction is
        UI-ONLY. That is developer work and it is the D16.3 handoff below's sibling, not the same
        item. Do not attempt to fix it by moving the field-level default; Disposition_PSA needs
        it.

        WHAT THE TWO TYPES ACTUALLY DIFFER ON is exactly two things: the counterparty token in
        Ball_In_Court__c (Seller here, Buyer on Disposition_PSA) and which parent lookup is
        populated. That is the whole delta.

        EVERY PICKLIST ON THE OBJECT IS LISTED HERE, INCLUDING ONES THIS CHANGE DOES NOT ALTER.
        A record type file that OMITS a picklist silently drops ALL of that picklist's values
        for the type - the field then offers nothing. Contract_Review__c has exactly THREE
        picklists: Ball_In_Court__c, Negotiation_Status__c and Stage__c. The fields/ directory
        was walked field by field to establish that, and the walk corrected the design document,
        which also named Asset_Type__c and Deal_Type__c - both are formula TEXT fields (they
        cross-object-read Opportunity__r), not picklists, and a picklistValues block naming
        either would be invalid.

        🔴 Stage__c IS A DERIVED FIELD. Contract_Review_Stage_Sync recomputes it from
        Negotiation_Status__c on every save, and a direct write to it COMMITS AND IS SILENTLY
        DISCARDED - measured org behaviour, not theory. It is listed here only so its values do
        not vanish from the type. Nothing in 3C writes it, and nothing added later should.

        THE THREE isActive=false LEGACY Stage__c VALUES ARE DELIBERATELY OMITTED
        ('Contract Execution (Signed)', 'Contract Negotiation', 'Prepare'). An inactive value is
        unselectable org-wide, so listing it grants nothing, while naming a value the platform
        does not consider live risks the exact "picklist value does not exist" rejection that
        cost 3A a two-phase deploy. ⚠ NO IN-REPO PRECEDENT EXISTS EITHER WAY - a sweep of every
        recordType file found none that references a field carrying inactive values, so this is
        the first case and it is a DEPLOY GATE, not a settled pattern. If a legacy value is ever
        reactivated it must be added here explicitly.

        NO URL-ENCODING IS NEEDED IN THIS FILE, which is worth stating because it is the
        exception. Inside a RecordType a picklist fullName must be URL-encoded (the repo
        precedent is Prepare%2FReview on LOI__c and Dead%2FPass in Opportunity's business
        processes). Every value listed here contains only letters and spaces - spaces are NOT
        encoded - so all fullNames are literal. The one value that would have needed it,
        'Contract Execution (Signed)', is inactive and omitted.

        NO <businessProcess> ELEMENT. That element applies to Opportunity, Case, Lead and
        Solution only; Contract_Review__c is a custom object.

        🔴 HANDOFF - APEX, NOT BUILT HERE (D16.3, the third and last of the three).
        OpportunityReviewService:100 inserts Contract_Review__c and stamps NO record type.
        Left alone, every auto-created ACQUISITION PSA lands on Master - one deal at a time,
        forever, silently - which is damage to a working flow caused by adding record types to
        an object whose creator predates them. The class already carries the pattern for NDA__c
        and LOI__c: a describe resolved ONCE per invocation (zero SOQL), an isAvailable() guard,
        and a test that re-reads RecordTypeId FROM THE DATABASE and fails unconditionally. ⚠ The
        guard question must be RE-ARGUED for this insert rather than inherited: the NDA guard
        exists because ensureNda runs on EVERY Opportunity insert including
        Database.convertLead, so an unguarded stamp would break lead conversion org-wide before
        gate T-A1 runs. This insert fires only on entry to the PSA stage, which is a narrower
        blast radius - but it is still pre-gate-reachable, so the guarded shape is the
        conservative match.
    -->
    <fullName>Acquisition_PSA</fullName>
    <active>true</active>
    <description>The buy-side PSA. DPEG is the buyer, so the counterparty is the Seller and Ball In Court reads Us / Seller. Parented by Opportunity. Its OWN four Negotiation Status values from 2026-08-14: Draft, Negotiation, Signed, Executed.</description>
    <label>Acquisition PSA</label>
</RecordType>